--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -4,11 +4,11 @@
   <button
     mat-raised-button
     color="primary"
-    routerLink="/form"
+    routerLink="/addmember"
     class="addButton"
   >
   
-    <mat-icon>add</mat-icon> Create New
+    <mat-icon>add</mat-icon> Ajouter membre
   </button>
 </div>
 
@@ -21,9 +21,19 @@
     (ngModelChange)="searchMembers(fetchedName.name)"
   />
 </mat-form-field>
+
+<mat-form-field appearance="fill" style="margin: 20px;" *ngIf="isTeacher">
+  <mat-label>Display Type</mat-label>
+  <mat-select (selectionChange)="changeDisplayedData($event)">
+    <mat-option value="0">Tous</mat-option>
+    <mat-option value="1">Mes encadrement</mat-option>
+    <mat-option value="2">Non encadrer</mat-option>
+  </mat-select>
+</mat-form-field>
+
 <table
   mat-table
-  [dataSource]="datasource"
+  [dataSource]="currentDisplay"
   class="mat-elevation-z8"
   style="width: 100%"
 >
@@ -44,20 +54,21 @@
 
   <!-- Weight Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>NAME</th>
-    <td mat-cell *matCellDef="let element">{{ element.nom }}</td>
+    <th mat-header-cell *matHeaderCellDef>Nom</th>
+    <td mat-cell *matCellDef="let element">{{ element.nom }} {{ element.prenom }}</td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef>TYPE</th>
-    <td mat-cell *matCellDef="let element">{{ element.type }}</td>
+    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <td mat-cell *matCellDef="let element"> {{ element.type=="etd" ? "Student" : "Teacher" }}</td>
   </ng-container>
   <!-- Symbol Column -->
   <ng-container matColumnDef="cv">
     <th mat-header-cell *matHeaderCellDef>CV</th>
     <td mat-cell *matCellDef="let element">
-      <a [href]="element.cv">
+      <div *ngIf="element.cv">
+      <button (click)="getResume(element)" mat-button color="primary">
         <mat-icon
           _ngcontent-gfw-c62=""
           role="img"
@@ -66,13 +77,15 @@
           data-mat-icon-type="font"
           >picture_as_pdf</mat-icon
         >
-      </a>
+        Resume
+      </button>
+    </div>
     </td>
   </ng-container>
   <!-- Symbol Column -->
   <ng-container matColumnDef="createdDate">
-    <th mat-header-cell *matHeaderCellDef>DATE CREATED</th>
-    <td mat-cell *matCellDef="let element">{{ element.createdDate }}</td>
+    <th mat-header-cell *matHeaderCellDef>Date naissance</th>
+    <td mat-cell *matCellDef="let element">{{ element.dateNaissance }}</td>
   </ng-container>
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
@@ -93,12 +106,35 @@
           style="color: red"
           (click)="openRemoveMemberDialog(element.id)"
         >
-          <mat-icon>delete</mat-icon>
+          <mat-icon>Supprimer</mat-icon>
         </button>
 
       </div>
 
-      <div *ngIf="!isAdmin">None</div>
+      <div *ngIf="isTeacher && !isSupervised(element) && element.type=='etd'">
+        <button
+        mat-icon-button
+        color="primary"
+        (click)="superviseMember(element)"
+      >
+        <mat-icon >add</mat-icon>
+        Encadrer
+      </button>
+      </div>
+
+      <div *ngIf="isTeacher && isSupervised(element) && element.type=='etd'">
+        <button
+        mat-icon-button
+        color="primary"
+        (click)="unsuperviseMember(element)"
+      >
+        <mat-icon >add</mat-icon>
+        Retirer
+      </button>
+      </div>
+
+
+      <div *ngIf="!isAdmin && !isTeacher">Aucune</div>
       
     </td>
   </ng-container>
